fix intro on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@ a:hover {
 
 #intro {
 	display: inline-block;
-	padding: 2rem;
+	padding: 1.5rem 1rem;
 	font-size: 1.3rem;
 	background-color: rgba(74, 152, 79, 1);
 	color: #FFFFFF;
@@ -288,6 +288,7 @@ p.small {
 	}
 
 	#intro {
+		padding: 2rem;
 		font-size: 1.5rem;
 	}
 
